media_player: default module is "any"

Fixes #26565.